--- a/css/all.css
+++ b/css/all.css
@@ -522,7 +522,7 @@ transition: all 0.5s ease-in-out;
 }
 .box_contact span.email{background: url(../images/icon_email2.png) no-repeat;}
 .box_contact span.phone{background: url(../images/icon_phone.png) no-repeat;}
-.box_contact span.skype{background: url(../images/icon_skype.png) no-repeat;}
+.box_contact span.linkedin{background: url(../images/icon_linkedin_green.png) no-repeat;}
 /*footer
  */
 #footer {
@@ -709,8 +709,8 @@ transition: all 0.5s ease-in-out;
 		background-image: url(../images/icon_phone@x2.png);
 		background-size:54px 54px;
 	}
-	.box_contact span.skype{
-		background-image: url(../images/icon_skype@x2.png);
+	.box_contact span.linkedin{
+		background-image: url(../images/icon_linkedin_green.png);
 		background-size:54px 51px;
 	}
 /* begin add	 */
