--- a/css/all.css
+++ b/css/all.css
@@ -710,7 +710,7 @@ transition: all 0.5s ease-in-out;
 		background-size:54px 54px;
 	}
 	.box_contact span.linkedin{
-		background-image: url(../images/icon_linkedin_green.png);
+		background-image: url(../images/icon_linkedin_green@x2.png);
 		background-size:54px 51px;
 	}
 /* begin add	 */
